--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather-App</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <h1>Weather-forecast</h1>
     <footer>My Weather-App</footer>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
